tests/Fixtures/Torture/Bad/new_module.g
// EXPECT G011
module M { }
kernel { entry func Main() { let M m = new M(); } }
